# Tori

./: .commit-msg.tmp  .dockerignore  .env.example  .gitignore  .gitmessage  .golangci.yml  .mailmap  .mcp.json  CLAUDE.md  COGNI-V2-DELIVERY.md  Dockerfile  Dockerfile.dockerignore  Dockerfile.slim  Dockerfile.slim.dockerignore  LICENSE  Makefile  README.md  REFACTOR-PLAN-cogni-skills-mcp-packs.md  docker-compose.yml  go.mod  go.sum  test_workflow_script.go  tmp_git_info.ps1  小羽.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  selection_accessibility.rs
sdk/python/: CHANGELOG.md  MANIFEST.in  README.md  openapi-config.yaml  pyproject.toml  setup.py
sdk/python/examples/: reflect_strategies.py  state_snapshot.py
sdk/python/tests/: test_admin.py  test_agent_kit.py  test_airi.py  test_approvals.py  test_audit.py  test_auth.py  test_backup.py  test_bots.py  test_breaker.py  test_browser.py  test_chat.py  test_cognis.py  test_connectors.py  test_conversations.py  test_cost.py  test_cron_system.py  test_discovery.py  test_dispatch.py  test_documents.py  test_embeddings.py  test_emotion.py  test_events.py  test_federation.py  test_files.py  test_fork.py  test_graph.py  test_heartbeat.py  test_ide.py  test_identity.py  test_instructions.py  test_interactions.py  test_iterate.py  test_knowledge_base.py  test_lora.py  test_market.py  test_memory_core.py  test_missions.py  test_models.py  test_modes.py  test_notify.py  (+33 more)
sdk/python/yunque/: __init__.py
sdk/python/yunque_client/: README.md  __init__.py
sdk/python/yunque_client/api/approvals/: get_v1_approvals.py  get_v1_approvals_rules.py  post_v1_approvals.py  post_v1_approvals_approve.py  post_v1_approvals_decide.py  post_v1_approvals_deny.py  post_v1_approvals_rules.py
sdk/python/yunque_client/api/audit/: get_api_audit_trail.py  get_v1_audit_stats.py  get_v1_audit_tail.py  post_v1_audit_verify.py
sdk/python/yunque_client/api/auth/: get_v1_auth_login.py  get_v1_auth_oauth_tori.py  get_v1_auth_oauth_tori_callback.py  get_v1_auth_set_password.py  get_v1_auth_status.py  post_v1_auth_login.py  post_v1_auth_oauth_tori.py  post_v1_auth_oauth_tori_callback.py  post_v1_auth_set_password.py
sdk/python/yunque_client/api/backup/: get_v1_backup_info.py  post_v1_backup_export.py  post_v1_backup_import.py
sdk/python/yunque_client/api/bots/: get_v1_bots.py  get_v1_bots_detail.py  post_v1_bots.py
sdk/python/yunque_client/api/breaker/: post_api_breaker_reset.py
sdk/python/yunque_client/api/browser/: get_api_browser_ext_scenarios.py  get_v1_browser_config.py  (+11 more)
sdk/python/yunque_client/models/: __init__.py  create_cogni_body.py  create_cogni_body_activation.py  create_cogni_body_checks_item.py  create_cogni_body_context.py  create_cogni_body_economics.py  create_cogni_body_experience.py  create_cogni_body_mcp.py  create_cogni_body_memory.py  create_cogni_body_surface.py  create_cogni_body_workflows_item.py  create_cogni_response_200.py  create_cogni_response_200_status.py  delete_cogni_response_200.py  disable_cogni_body.py  disable_cogni_response_200.py  discover_remote_cognis_body.py  discover_remote_cognis_response_200.py  empty.py  enable_cogni_body.py  enable_cogni_response_200.py  error.py  evolve_cogni_body.py  evolve_cogni_response_200.py  export_cogni_bundle_response_200.py  expose_cogni_body.py  expose_cogni_response_200.py  generate_cogni_body.py  generate_cogni_response_200.py  generate_cogni_response_200_declaration.py  get_api_audit_trail_response_200.py  get_api_browser_ext_scenarios_response_200.py  get_api_browser_ext_status_response_200.py  get_api_connectors_detail_response_200.py  get_api_connectors_response_200.py  get_api_files_download_response_200.py  get_api_files_response_200.py  get_api_iterate_proposals_response_200.py  get_api_iterate_status_response_200.py  get_api_notify_channels_response_200.py  (+616 more)
(+3657 files in other folders)
