[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yunque"
version = "0.1.0"
description = "Python SDK for Yunque Agent plugins, automation scripts, and generated API clients."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Yunque Team" }
]
keywords = ["yunque", "agent", "sdk", "automation", "plugins"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "attrs>=23.1.0",
  "httpx>=0.24.0",
  "python-dateutil>=2.8.2"
]

[project.urls]
Homepage = "https://github.com/LittleXiaYuan/yunque-agent"
Documentation = "https://github.com/LittleXiaYuan/yunque-agent/tree/main/docs"
Source = "https://github.com/LittleXiaYuan/yunque-agent"
Issues = "https://github.com/LittleXiaYuan/yunque-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["yunque*", "yunque_client*"]
