[package]
name = "yunque-desktop"
version = "0.1.0"
edition = "2021"
description = "Yunque Agent Desktop Client"

[lib]
# Distinct from the binary's normalised name (`yunque_desktop`) so the bin and
# lib targets don't emit the same `yunque_desktop.pdb` (output-collision warning
# on Windows). Matches Tauri's `{app}_lib` convention.
name = "yunque_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
urlencoding = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "net", "io-util"] }

# Platform-specific signal handling for graceful sidecar shutdown.
# Windows: GenerateConsoleCtrlEvent(CTRL_BREAK_EVENT) on a process group.
# Unix:    libc::kill(pid, SIGTERM).
[target.'cfg(windows)'.dependencies]
uiautomation = "0.24"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
